--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@ body {
     margin-top: 30px;
     font-weight: 400;
     font-size: 20px;
-
 }
 
 .header-image {
@@ -216,6 +215,23 @@ hr {
 
 }
 
+.hide-button {
+    text-align: center;
+    display: none;
+}
+
+.button-2 {
+    background: #DD0000;
+    color: #FFFFFF;
+    border-radius: 5px;
+    width: 187px;
+    height: 56px;
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 20px;
+    text-align: center;
+}
+
 /* ................................
     Mobile Device Responsive  
     ..................................*/
@@ -275,5 +291,9 @@ hr {
 @media only screen and (min-width: 678px) and (max-width: 992px) {
     .right-side-container {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .hide-button {
+        display: block;
     }
 }
