social icon added

--- a/style.css
+++ b/style.css
@@ -177,6 +177,10 @@ hr {
     color: #B9B9B9;
 }
 
+#social-icon a {
+    color: #FFFFFF;
+}
+
 /* ..................................
     upcoming match css sheet...........  */
 
