--- a/style.css
+++ b/style.css
@@ -33,15 +33,24 @@ body {
     display: none;
 }
 
-.button {
+.box-button {
     background: #DD0000;
     color: #FFFFFF;
     border-radius: 5px;
     width: 187px;
-    height: 56px;
+    height: 75px;
     margin-top: 30px;
     font-weight: 400;
     font-size: 20px;
+    text-align: center;
+    padding: 3px;
+    transition: width 5s, height 5s;
+}
+
+.box-button:hover {
+    width: 300px;
+    height: 90px;
+    background-color: blueviolet;
 }
 
 .header-image {
